GNOME Bugzilla – Bug 606955
File operation dialogue , the file count and the size count change in opposite direction.
Last modified: 2012-01-16 14:57:40 UTC
To reproduce: copy folder with several files to a new location (e.g. "~/ubuntu/videos/Fav" to "~/Desktop") Deviation: File operation window shows confusing information; First line , the file count is a count *down* while second line , size information count *increases*. Expected: information during copy process is same order in both the lines. It would be ideal if , the dialogue was: upper sentence: Copying 21 of 24 files (in "Fav") to "Desktop" lower sentence: 2.1GB of 3.0 GB - 2 minutes left (24.6 Mb/s) Now in both lines the count *increases* . Or: upper sentence: Copying files from "Fav" to "Desktop" (21 out of 24 left, now copying "episode 3.avi") lower sentence: 2.1 out of 3.0 GB left to transfer - 2 minutes (24.6 Mb/s) Now in both lines the count decreases. First reported > https://bugs.launchpad.net/hundredpapercuts/+bug/503330
oops , missed a word > upper sentence: Copying File 21 of 24 files (in "Fav") to "Desktop"
Created attachment 157906 [details] [review] Updates file counter in file operation dialog This one changes Moving/Copying/Duplicating X files (..) to Moving/Copying/Duplicating File Y of X files (..) where Y goes from 1 to X
Why do you capitalize "File"? otherwise this looks good.
(In reply to comment #3) > Why do you capitalize "File"? otherwise this looks good. It is to keep the reference as a proper noun for the "File N"
Review of attachment 157906 [details] [review]: HIG recommends using sentence capitalization for dialogs, so I agree with Alex.
Created attachment 165050 [details] [review] Updated patch according to comments I'm not completely sure about the wording. Why mention the "file" word at all? Copying file 1 of 100 files (in "A") to "B" or Copying 1 of 100 files (in "A") to "B" or maybe Copying 1 of 100 files (from "A" to "B")
Created attachment 165051 [details] Screenshot of last patch
The repetition of the word 'file' feels awkward to me. Having one location in brackets and the other outside is also a little confusing, and having brackets mid-way through the sentence breaks up the statement. 'in' is potentially confusing too. (Which 'in' is being referred to, the origin or the destination?). A simple statement with a 'from A to B' type expression is probably easiest to understand. A couple of suggestions: "Copying 100 files from 'A' to 'B' (99 remaining)" or "Copying file 1 of 100 from 'A' to 'B'" I think my favourite is probably the second, since it doesn't have brackets and places the most relevant information towards the beginning of the sentence, though the use of the remaining count in the first suggestion does have merit.
(In reply to comment #7) > Created an attachment (id=165051) [details] > Screenshot of last patch Ah! There are three counts going on there! File# counts , size count and time remaining! Now with the time count , it *has* to be decreasing. Now why not keep everything decreasing? Copying 100 files from 'A' to 'B' (99 remaining) [######### ] 3.0 GB (2.1GB remaining) - 2 minutes left (24.6 Mb/s) Now, can we name the file currently being transfered ?
(In reply to comment #9) > Copying 100 files from 'A' to 'B' (99 remaining) > [######### ] > 3.0 GB (2.1GB remaining) - 2 minutes left (24.6 Mb/s) This has probably been asked before, but I'll ask anyway: do we need *all* this information? This dialog has 4 measures of progress! Let's remove the file count and the transfer size: Copying 100 files from 'A' to 'B' [-------------> ] 2 minutes remaining (24.6 Mb/s) > Now, can we name the file currently being transfered ? Why is this necessary?
@Allan Day, I, for one, is interested in more details, especially the size. Maybe we could have an expander with additional data (as Vista 7 does)? Or is that overkill?
(In reply to comment #10) > (In reply to comment #9) > > > Now, can we name the file currently being transfered ? > > Why is this necessary? We can just keep is as: Copying 100 files from 'A' to 'B' (2 minutes remaining) [-------------> ] Add a little more detail , and move everything within an expander.
Created attachment 165087 [details] current behavior. (In reply to comment #10) > (In reply to comment #9) > > can we name the file currently being transfered ? > > Why is this necessary? Filename is displayed during single file operations. But not for multiple files. > > > Copying 100 files from 'A' to 'B' (99 remaining) > > [######### ] > > 3.0 GB (2.1GB remaining) - 2 minutes left (24.6 Mb/s) > > This has probably been asked before, but I'll ask anyway: do we need *all* this > information? This dialog has 4 measures of progress! > > Let's remove the file count and the transfer size: > File transfer size is often important. If we are trying to keep it simple. : Copying 100 files (3.0GB) to 'B' - 2 minutes left [-------------> ] >Details Note ,here we do *not* count down. Just let the numbers be static. Within the details section we show info. Copying 100 files (3.0GB) to "B" - 2 minutes left [-------------> ] v Details Copying : At 24.6 Mb/s "Blahblahblah" From : "A" Remaining : 50 files (1.5GB) For single files: Copying "Blahblahblah" (1.0GB) to "B" - 1 minutes left [-------------> ] > Details Copying "Blahblahblah" (1.0GB) to "B" - 1 minutes left [-------------> ] v Details Copying : At 24.6 Mb/s From : "A" Remaining : 0.5GB "Copying" , is repeated twice! , any other word we can use?
> If we are trying to keep it simple. : > > Copying 100 files (3.0GB) to 'B' - 2 minutes left > [-------------> ] > >Details The upper sentence is extremely difficult for humans to parse. If we want a quick fix, this seems like a good solution for now: Copying file 1 of 100 to 'B' - 2 minutes remaining [-------------> ] 1MB of 3.0GB copied (24.6 MB/s) Or this if we want to remove the file count: Copying 100 files to 'B' - 2 minutes remaining [-------------> ] 1MB of 3.0GB copied (24.6 MB/s)
(In reply to comment #14) > Copying file 1 of 100 to 'B' - 2 minutes remaining > [-------------> ] > 1MB of 3.0GB copied (24.6 MB/s) This is my favourite too.
(In reply to comment #14) > > The upper sentence is extremely difficult for humans to parse. If we want a > quick fix, this seems like a good solution for now: > It depends , If we can come to a consensus about the designs done already : http://live.gnome.org/Nautilus/ProgressWindow And get them for this cycle , it would be better than to do the change twice within the same cycle. Also, there is , http://home.in.tum.de/~sickert/dbus-tasks-mockups
(In reply to comment #16) > It depends , If we can come to a consensus about the designs done already : > http://live.gnome.org/Nautilus/ProgressWindow > > And get them for this cycle , it would be better than to do the change twice > within the same cycle. > > Also, there is , > http://home.in.tum.de/~sickert/dbus-tasks-mockups Honestly, I don't think redesigning that dialog is feasible for this cycle, and it's outside of the scope of this bug, too.
(In reply to comment #17) > > Honestly, I don't think redesigning that dialog is feasible for this cycle, and > it's outside of the scope of this bug, too. Cool! Then we can go with either changing all the dialogues to : (In reply to comment #15) > (In reply to comment #14) > > > Copying file 1 of 100 to 'B' - 2 minutes remaining > > [-------------> ] > > 1MB of 3.0GB copied (24.6 MB/s) > > This is my favourite too. Note , if we do this , we would have to change the single file transfer dialogues to be similar, as well. Or We can change the first line *alone* from: Copying 100 files to 'B' To: Copying file 1 of 100 to 'B' Latter is easier. :) [for reference pls see my earlier screenshot of the current behavior.]
(In reply to comment #18) > Cool! Then we can go with either changing all the dialogues to : > Copying file 1 of 100 to 'B' Yes, what I meant is let's just stick to the original bug report and change the wording for the first line not to show a decreasing count, and leave the rest unmodified. We will eventually address other design issues with the dialog as a whole in separate reports.
Created attachment 165240 [details] [review] Show current file counter and total files in file operation dialog (#606955) This patch removes the ngettext functions as they're not needed. Text will change to this (example) Copying file 1 of 100 (in "A") to "B"
Review of attachment 165240 [details] [review]: Let's finally get this in for 3.4.
Cosimo, would you mind pushing? I've got no time atm.
Will do as soon as Nautilus is branched for GNOME 3.2.
I think ngettext functions are needed there, at least for my language (Polish) and other Slavic languages. Would you mind asking gnome-i18n for approval first?
I'm sorry, I was wrong. I misunderstood this as "Copying 2 files of 10", while it's rather like "Copying 2nd file of 10", isn't it? As such, it doesn't require ngettext for Polish.
(In reply to comment #25) > I'm sorry, I was wrong. I misunderstood this as "Copying 2 files of 10", while > it's rather like "Copying 2nd file of 10", isn't it? > > As such, it doesn't require ngettext for Polish. Yes, the string literally means "Copying/Moving/Deleting... file number X in a set of XX files".
AFAIK, gettext doesn't have support for ordinal numbers, so IMO it would be pointless to use ngettext here even if some translators would want to translate to "translating nth file"
I'm sorry I caused a delay on this. Is it possible to merge the patch before string freeze?
Pushed this patch to git master now. Closing as FIXED.