file-operations: show current file counter and total files

Change the file operation strings so that both the current file counter
and the total number of files are shown in the UI.

https://bugzilla.gnome.org/show_bug.cgi?id=606955